# redirection

./: .eslintrc.json  .gitignore  LICENSE  README.md  app.py  build.sh  cdk.json  package-lock.json  package.json  requirements.txt  setup.py
.github/: dependabot.yml
.github/workflows/: cdk-deploy.yml  test.yml
lambda/: Cargo.toml  redirect.py  redirect.ts
lambda/src/: main.rs
lib/: redirection-stack.ts  rust-lambda.ts  util.ts
redirect/: redirect_stack.py
test/: redirection.test.ts
