[package]
name = "redirection-get"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1"
serde_json = "1"
aws-sdk-dynamodb = "0.2.0"
aws-config = "0.2.0"
tokio = { version = "1", features = ["full"] }
lambda_http = "0.4"
thiserror = "1"